--- a/sass/config/_fonts.sass
+++ b/sass/config/_fonts.sass
@@ -1,3 +1,4 @@
+// ROBOTO
 +font-face($font, '../fonts/roboto/robotoregular', ('woff', 'woff2'))
   font-weight: 400
 +font-face($font, '../fonts/roboto/robotolight', ('woff', 'woff2'))
@@ -8,3 +9,30 @@
   font-weight: 700
 +font-face($font, '../fonts/roboto/robotoblack', ('woff', 'woff2'))
   font-weight: 900
+
+// HELVETICA
++font-face($secondFont, '../fonts/helvetica/helveticaregular', ('woff', 'woff2'))
+  font-weight: 400
++font-face($secondFont, '../fonts/helvetica/helveticaitalic', ('woff', 'woff2'))
+  font-weight: 400
+  font-style: italic
++font-face($secondFont, '../fonts/helvetica/helveticalight', ('woff', 'woff2'))
+  font-weight: 200
++font-face($secondFont, '../fonts/helvetica/helveticalightitalic', ('woff', 'woff2'))
+  font-weight: 200
+  font-style: italic
++font-face($secondFont, '../fonts/helvetica/helveticamedium', ('woff', 'woff2'))
+  font-weight: 500
++font-face($secondFont, '../fonts/helvetica/helveticamediumitalic', ('woff', 'woff2'))
+  font-weight: 500
+  font-style: italic
++font-face($secondFont, '../fonts/helvetica/helveticabold', ('woff', 'woff2'))
+  font-weight: 700
++font-face($secondFont, '../fonts/helvetica/helveticabolditalic', ('woff', 'woff2'))
+  font-weight: 700
+  font-style: italic
++font-face($secondFont, '../fonts/helvetica/helveticablack', ('woff', 'woff2'))
+  font-weight: 900
++font-face($secondFont, '../fonts/helvetica/helveticablackitalic', ('woff', 'woff2'))
+  font-weight: 900
+  font-style: italic
