--- a/sass/config/_var.sass
+++ b/sass/config/_var.sass
@@ -1,13 +1,17 @@
 :root
-  --main-color: #303441
+  --main-color: #525252
   --second-color: #eb5055
-  --text-color: #303441
+  --background-color: #f7f6f2
+  --text-color: #525252
   --font: "Roboto"
+  --second-font: "Helvetica"
 
 $font: var(--font)
+$secondFont: var(--second-font)
 
 $mainColor: var(--main-color)
 $secondColor: var(--second-color)
+$backgroundColor: var(--background-color)
 $textColor: var(--text-color)
 
 $width: 1800px
