--- a/sass/common/_main.sass
+++ b/sass/common/_main.sass
@@ -19,9 +19,9 @@
   padding: 0
   margin: 0
 .swiper-slide
-  flex-shrink: 1
+  flex-shrink: 10
   padding: 1rem
-  background: #f1f5f9
+  background: $backgroundColor
   border-radius: 10px
 .swiper__img
   width: 50%
@@ -29,4 +29,37 @@
 .about-us
   padding: rem(20px) 0
   text-align: center
-  background: #c1c5c9
+  background: $backgroundColor
+  &__info
+    max-width: 892px
+    margin: 0 auto
+    &-title
+      font-weight: 900
+      font-size: 40px
+      span
+        font-weight: 200
+    &-text
+      font-size: 12px
+      letter-spacing: 5px
+      position: relative
+      text-transform: uppercase
+      &::after
+        content: ''
+        position: absolute
+        top: 8px
+        left: 0
+        width: 60px
+        height: 3px
+        background: #cccccc
+      &::before
+        content: ''
+        position: absolute
+        top: 8px
+        right: 0
+        width: 60px
+        height: 3px
+        background: #cccccc
+    &-desc
+      font-family: $secondFont
+      font-size: 16px
+      line-height: 29px
